Twitter: Fix swagger p2
